--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="header__navbar__logo">
 
           <div class="header__navbar__img">
-            <img src="/images/logo.svg" alt="logo-blogr">
+            <img src="images/logo.svg" alt="logo-blogr">
           </div>
 
           <div class="header__navbar__menu">
