Edit animations AOS and Fix href

--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
           </div>
 
           <div class="header__navbar__menu">
-            <p class="header__navbar__item" id="1" href="">Product</p>
+            <p class="header__navbar__item" id="1">Product</p>
             <ul class="header__navbar__item--ul1">
-                <li><a href=""></a>Overview</a></li>
-                <li><a href=""></a>Pricing</a></li>
-                <li><a href=""></a>Marketplace</a></li>
-                <li><a href=""></a>Features</a></li>
-                <li><a href=""></a>Integrations</a></li>
+                <li><a href="#"></a>Overview</a></li>
+                <li><a href="#"></a>Pricing</a></li>
+                <li><a href="#"></a>Marketplace</a></li>
+                <li><a href="#"></a>Features</a></li>
+                <li><a href="#"></a>Integrations</a></li>
               </ul>
-            <p class="header__navbar__item" id="2" href="">Company</p>
+            <p class="header__navbar__item" id="2">Company</p>
             <ul class="header__navbar__item--ul2">
-                <li><a href="">About</a></li>
-                <li><a href="">Team</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Careers</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Careers</a></li>
               </ul>
-            <p class="header__navbar__item" id="3" href="">Connect</p>
+            <p class="header__navbar__item" id="3">Connect</p>
             <ul class="header__navbar__item--ul3">
-                <li><a href="">Contact</a></li>
-                <li><a href="">Newsletter</a></li>
-                <li><a href="">LinkedIn</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Newsletter</a></li>
+                <li><a href="#">LinkedIn</a></li>
               </ul>
           </div>
 
@@ -77,7 +77,7 @@
       </div>
     </header>
 
-    <section class="section-light" data-aos="fade-down-right">
+    <section class="section-light" data-aos="fade-down">
       <h2 class="section-light__title text-center">Designed for the future</h2>
       <div class="section-light--flex">
         <picture class="section-light__right">
@@ -107,7 +107,7 @@
       </div>
     </section>
 
-    <section class="section-dark" data-aos="fade-down-left">
+    <section class="section-dark" data-aos="fade-down">
       <picture class="section-dark__left">
         <img src="images/illustration-phones.svg" alt="illustration-editor-mobile">
       </picture>
@@ -121,7 +121,7 @@
       </div>
     </section>
 
-    <section class="section-light section-light--flex section-light--flex--reverse" data-aos="fade-down-right" >
+    <section class="section-light section-light--flex section-light--flex--reverse" data-aos="fade-down">
 
       <picture class="section-light__right">
         <source media="(min-width: 992px)" srcset="images/illustration-laptop-desktop.svg">
@@ -149,7 +149,7 @@
       </div>
     </section>
 
-    <footer class="footer" data-aos="fade-down-left">
+    <footer class="footer" data-aos="fade-down">
       <div class="footer-section text-center">
         <svg width="101" height="40" xmlns="http://www.w3.org/2000/svg">
           <path
