--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
           <div class="header__navbar__menu">
             <p class="header__navbar__item" id="1">Product</p>
             <ul class="header__navbar__item--ul1">
-                <li><a href="#"></a>Overview</a></li>
-                <li><a href="#"></a>Pricing</a></li>
-                <li><a href="#"></a>Marketplace</a></li>
-                <li><a href="#"></a>Features</a></li>
-                <li><a href="#"></a>Integrations</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Overview</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Pricing</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Marketplace</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Features</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Integrations</a></li>
               </ul>
             <p class="header__navbar__item" id="2">Company</p>
             <ul class="header__navbar__item--ul2">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Careers</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/">About</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/">Team</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/">Blog</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/">Careers</a></li>
               </ul>
             <p class="header__navbar__item" id="3">Connect</p>
             <ul class="header__navbar__item--ul3">
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Newsletter</a></li>
-                <li><a href="#">LinkedIn</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/">Contact</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/">Newsletter</a></li>
+                <li><a href="https://arthurgc.github.io/blogr-landing-page/">LinkedIn</a></li>
               </ul>
           </div>
 
@@ -158,29 +158,29 @@
         </svg>
       </div>
 
-      <div class="footer-section text-center">
+      <ul class="footer-section text-center">
         <h4 class="footer-section__title">Product</h4>
-        <li><a href="">Overview</a></li>
-        <li><a href="">Pricing</a></li>
-        <li><a href="">Marketplace</a></li>
-        <li><a href="">Features</a></li>
-        <li><a href="">Integrations</a></li>
-      </div>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Overview</a></li>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Pricing</a></li>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Marketplace</a></li>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Features</a></li>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Integrations</a></li>
+      </ul>
 
-      <div class="footer-section text-center">
+      <ul class="footer-section text-center">
         <h4 class="footer-section__title">Company</h4>
-        <li><a href="">About</a></li>
-        <li><a href="">Team</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Careers</a></li>
-      </div>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">About</a></li>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Team</a></li>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Blog</a></li>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Careers</a></li>
+      </ul>
 
-      <div class="footer-section text-center">
+      <ul class="footer-section text-center">
         <h4 class="footer-section__title">Connect</h4>
-        <li><a href="">Contact</a></li>
-        <li><a href="">Newsletter</a></li>
-        <li><a href="">LinkedIn</a></li>
-      </div>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Contact</a></li>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Newsletter</a></li>
+        <li><a href="https://arthurgc.github.io/blogr-landing-page/">LinkedIn</a></li>
+      </ul>
     </footer>
   </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous"></script>
