Fix child elements

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles/styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+    integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
+    crossorigin="anonymous" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | [Blogr]</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -31,25 +33,25 @@
           <div class="header__navbar__menu">
             <p class="header__navbar__item" id="1">Product</p>
             <ul class="header__navbar__item--ul1">
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Overview</a></li>
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Pricing</a></li>
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Marketplace</a></li>
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Features</a></li>
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Integrations</a></li>
-              </ul>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Overview</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Pricing</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Marketplace</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Features</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Integrations</a></li>
+            </ul>
             <p class="header__navbar__item" id="2">Company</p>
             <ul class="header__navbar__item--ul2">
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/">About</a></li>
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/">Team</a></li>
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/">Blog</a></li>
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/">Careers</a></li>
-              </ul>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">About</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">Team</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">Blog</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">Careers</a></li>
+            </ul>
             <p class="header__navbar__item" id="3">Connect</p>
             <ul class="header__navbar__item--ul3">
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/">Contact</a></li>
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/">Newsletter</a></li>
-                <li><a href="https://arthurgc.github.io/blogr-landing-page/">LinkedIn</a></li>
-              </ul>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">Contact</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">Newsletter</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">LinkedIn</a></li>
+            </ul>
           </div>
 
         </div>
@@ -158,39 +160,47 @@
         </svg>
       </div>
 
-      <ul class="footer-section text-center">
+      <div class="footer-section text-center">
         <h4 class="footer-section__title">Product</h4>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Overview</a></li>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Pricing</a></li>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Marketplace</a></li>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Features</a></li>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Integrations</a></li>
-      </ul>
+        <ul>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">Overview</a></li>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">Pricing</a></li>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">Marketplace</a></li>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">Features</a></li>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">Integrations</a></li>
+        </ul>
+      </div>
 
-      <ul class="footer-section text-center">
+      <div class="footer-section text-center">
         <h4 class="footer-section__title">Company</h4>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">About</a></li>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Team</a></li>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Blog</a></li>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Careers</a></li>
-      </ul>
+        <ul>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">About</a></li>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">Team</a></li>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">Blog</a></li>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">Careers</a></li>
+        </ul>
+      </div>
 
-      <ul class="footer-section text-center">
+      <div class="footer-section text-center">
         <h4 class="footer-section__title">Connect</h4>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Contact</a></li>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">Newsletter</a></li>
-        <li><a href="https://arthurgc.github.io/blogr-landing-page/">LinkedIn</a></li>
-      </ul>
+        <ul>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">Contact</a></li>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">Newsletter</a></li>
+          <li><a href="https://arthurgc.github.io/blogr-landing-page/">LinkedIn</a></li>
+        </ul>
+      </div>
     </footer>
   </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous"></script>
-<script>
-  AOS.init({
-    delay: 500,
-    duration: 1000,
-  });
-</script>
-<script src="js/app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+    integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
+    crossorigin="anonymous"></script>
+  <script>
+    AOS.init({
+      delay: 500,
+      duration: 1000,
+    });
+  </script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
