--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
           <div class="header__navbar__menu">
             <p class="header__navbar__item" id="1">Product</p>
             <ul class="header__navbar__item--ul1">
-              <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Overview</a></li>
-              <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Pricing</a></li>
-              <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Marketplace</a></li>
-              <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Features</a></li>
-              <li><a href="https://arthurgc.github.io/blogr-landing-page/"></a>Integrations</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">Overview</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">Pricing</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">Marketplace</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">Features</a></li>
+              <li><a href="https://arthurgc.github.io/blogr-landing-page/">Integrations</a></li>
             </ul>
             <p class="header__navbar__item" id="2">Company</p>
             <ul class="header__navbar__item--ul2">
