Fix AOS data-aos

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
     </section>
 
-    <section class="section-dark" data-aos="fade-down">
+    <section class="section-dark" >
       <picture class="section-dark__left">
         <img src="images/illustration-phones.svg" alt="illustration-editor-mobile">
       </picture>
@@ -123,7 +123,7 @@
       </div>
     </section>
 
-    <section class="section-light section-light--flex section-light--flex--reverse" data-aos="fade-down">
+    <section class="section-light section-light--flex section-light--flex--reverse">
 
       <picture class="section-light__right">
         <source media="(min-width: 992px)" srcset="images/illustration-laptop-desktop.svg">
@@ -151,7 +151,7 @@
       </div>
     </section>
 
-    <footer class="footer" data-aos="fade-down">
+    <footer class="footer">
       <div class="footer-section text-center">
         <svg width="101" height="40" xmlns="http://www.w3.org/2000/svg">
           <path
